# mycnet

./: .gitignore  Cargo.toml  PROTOCOLO_YATRA.md  README.md  docker-compose.yml
config/: prometheus.yml
crates/mycnet-connect/: Cargo.toml
crates/mycnet-connect/src/: client.rs  lib.rs  types.rs
crates/mycnet-core/: Cargo.toml
crates/mycnet-core/src/: adm.rs  lib.rs  mesh.rs  s60.rs  yhwh.rs
crates/mycnet-daemon/: Cargo.toml
crates/mycnet-daemon/src/: api.rs  main.rs  state.rs
crates/mycnet-memory/: Cargo.toml
crates/mycnet-memory/src/: lattice.rs  lib.rs  phase_gate.rs  storage.rs  sync.rs
docs/: 4_NODE_CHANGES.md  4_NODE_QUICKSTART.md  MYCNET_IMPLEMENTATION_PLAN.md  Penta-resonancia.md  Principio de Bernoulli.md  TEOREMA DE BERNOULLI.md  TeoriaDeCuerdas_investigacion.md  Teoría_de_la_relatividad.md  el_gran_secreto_s60.md  optomecanica_fluidos.md  super_radiancia_sincronia.md  vision_maestra_clean.md
scripts/: ceph_yhwh_tuner.sh  install-interceptor.sh  mesh_setup.sh  minio_deploy.sh  mycnet_s60_monitor.py
