[workspace]
members = [
    "crates/mycnet-core",
    "crates/mycnet-daemon",
    "crates/mycnet-connect",
    "crates/mycnet-memory",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Jaime Novoa <jaime.novoase@gmail.com>"]
license     = "PROPRIETARY"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["ws"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror   = "1"
anyhow      = "1"
