[package]
name    = "mycnet-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cliente público para conectarse a la red MycNet"

[dependencies]
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
reqwest          = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util     = "0.3"
tracing          = { workspace = true }
