[package]
name    = "mycnet-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "mycnetd"
path = "src/main.rs"

[dependencies]
mycnet-core        = { path = "../mycnet-core" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
